welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:8: error: not found: value setpos
		setpos(i,0)
                ^